// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Library screen renders the Library unchanged 1`] = `
<View>
  | flex: 1
  <View>
    | backgroundColor: "#efe7f7"
    | flex: 1
    <View>
      | bottom: 0
      | left: 0
      | opacity: 1
      | position: "absolute"
      | right: 0
      | top: 0
      <ViewManagerAdapter_ExpoImage>
        | bottom: 0
        | left: 0
        | position: "absolute"
        | right: 0
        | top: 0
    <View>
      ~ className: "flex-1 items-center justify-between px-8 pb-8 pt-16"
      <View>
        | alignItems: "center"
        | flexBasis: "0%"
        | flexGrow: 1
        | flexShrink: 1
        | justifyContent: "center"
        <View accessibilityState={}>
          <View>
            | transform: [{"translateY":0}]
            <ViewManagerAdapter_ExpoImage accessibilityLabel="WhoCards">
              | height: 53
              | width: 280
        <Text>
          | color: "#111516cc"
          | fontFamily: "golos-text"
          | fontSize: 17.5
          | fontWeight: 600
          | lineHeight: 26.25
          | marginTop: 24.5
          | opacity: 1
          | textAlign: "center"
          "Change your world,"
          "\\n"
          "one conversation at a time."
      <View>
        | alignItems: "center"
        | gap: 17.5
        | opacity: 1
        | width: "100%"
        <Text>
          | color: "#6b6d82"
          | fontFamily: "golos-text"
          | fontSize: 12.25
          | lineHeight: 17.5
          "66"
          " cards · "
          "14"
          " languages"
        <View accessibilityRole="button" accessibilityLabel="Play" accessibilityState={}>
          | alignItems: "center"
          | backgroundColor: "#f9d75f"
          | borderRadius: 9007199254740990
          | flexDirection: "row"
          | justifyContent: "center"
          | paddingBlock: 14
          | transform: [{"scale":1}]
          | width: "100%"
          <Text>
            | color: "#111516"
            | fontFamily: "ionicons"
            | fontSize: 18
            | fontStyle: "normal"
            | fontWeight: "normal"
            | marginRight: 8
            ""
          <Text>
            | color: "#111516"
            | fontFamily: "golos-text"
            | fontSize: 14
            | fontWeight: 700
            | lineHeight: 21
            "Play"
        <View accessibilityRole="button" accessibilityLabel="Settings" accessibilityState={}>
          | alignItems: "center"
          | backgroundColor: "#65636e"
          | borderRadius: 9007199254740990
          | flexDirection: "row"
          | gap: 7
          | justifyContent: "center"
          | paddingBlock: 14
          | transform: [{"scale":1}]
          | width: "100%"
          <Text>
            | color: "#f5f5f5"
            | fontFamily: "ionicons"
            | fontSize: 18
            | fontStyle: "normal"
            | fontWeight: "normal"
            ""
          <Text>
            | color: "#f5f5f5"
            | fontFamily: "golos-text"
            | fontSize: 14
            | fontWeight: 700
            | lineHeight: 21
            "Settings"
`;

exports[`Library screen renders the Library unchanged in the Dark Theme Display setting 1`] = `
<View>
  | flex: 1
  <View>
    | backgroundColor: "#08001a"
    | flex: 1
    <View>
      | bottom: 0
      | left: 0
      | opacity: 1
      | position: "absolute"
      | right: 0
      | top: 0
      <ViewManagerAdapter_ExpoImage>
        | bottom: 0
        | left: 0
        | position: "absolute"
        | right: 0
        | top: 0
    <View>
      ~ className: "flex-1 items-center justify-between px-8 pb-8 pt-16"
      <View>
        | alignItems: "center"
        | flexBasis: "0%"
        | flexGrow: 1
        | flexShrink: 1
        | justifyContent: "center"
        <View accessibilityState={}>
          <View>
            | transform: [{"translateY":0}]
            <ViewManagerAdapter_ExpoImage accessibilityLabel="WhoCards">
              | height: 53
              | width: 280
        <Text>
          | color: "#f5f5f5cc"
          | fontFamily: "golos-text"
          | fontSize: 17.5
          | fontWeight: 600
          | lineHeight: 26.25
          | marginTop: 24.5
          | opacity: 1
          | textAlign: "center"
          "Change your world,"
          "\\n"
          "one conversation at a time."
      <View>
        | alignItems: "center"
        | gap: 17.5
        | opacity: 1
        | width: "100%"
        <Text>
          | color: "#9698af"
          | fontFamily: "golos-text"
          | fontSize: 12.25
          | lineHeight: 17.5
          "66"
          " cards · "
          "14"
          " languages"
        <View accessibilityRole="button" accessibilityLabel="Play" accessibilityState={}>
          | alignItems: "center"
          | backgroundColor: "#f9d75f"
          | borderRadius: 9007199254740990
          | flexDirection: "row"
          | justifyContent: "center"
          | paddingBlock: 14
          | transform: [{"scale":1}]
          | width: "100%"
          <Text>
            | color: "#111516"
            | fontFamily: "ionicons"
            | fontSize: 18
            | fontStyle: "normal"
            | fontWeight: "normal"
            | marginRight: 8
            ""
          <Text>
            | color: "#111516"
            | fontFamily: "golos-text"
            | fontSize: 14
            | fontWeight: 700
            | lineHeight: 21
            "Play"
        <View accessibilityRole="button" accessibilityLabel="Settings" accessibilityState={}>
          | alignItems: "center"
          | backgroundColor: "#65636e"
          | borderRadius: 9007199254740990
          | flexDirection: "row"
          | gap: 7
          | justifyContent: "center"
          | paddingBlock: 14
          | transform: [{"scale":1}]
          | width: "100%"
          <Text>
            | color: "#f5f5f5"
            | fontFamily: "ionicons"
            | fontSize: 18
            | fontStyle: "normal"
            | fontWeight: "normal"
            ""
          <Text>
            | color: "#f5f5f5"
            | fontFamily: "golos-text"
            | fontSize: 14
            | fontWeight: 700
            | lineHeight: 21
            "Settings"
`;

exports[`Play screen renders a Question unchanged 1`] = `
<View>
  | flex: 1
  <View>
    | backgroundColor: "#efe7f7"
    | flex: 1
    <View>
      | bottom: 0
      | left: 0
      | opacity: 1
      | position: "absolute"
      | right: 0
      | top: 0
      <ViewManagerAdapter_ExpoImage>
        | bottom: 0
        | left: 0
        | position: "absolute"
        | right: 0
        | top: 0
    <View>
      | flexBasis: "0%"
      | flexGrow: 1
      | flexShrink: 1
      <View>
        | flexBasis: "0%"
        | flexGrow: 1
        | flexShrink: 1
        | paddingBottom: 0
        | paddingInline: 28
        | paddingTop: 0
        <View>
          | flexBasis: "0%"
          | flexGrow: 1
          | flexShrink: 1
          | justifyContent: "center"
          <View>
            | opacity: 1
            | transform: [{"translateX":0}]
            <Text>
              | color: "#111516"
              | fontFamily: "golos-text"
              | fontSize: 81
              | lineHeight: 93.15
              | textAlign: "left"
              | writingDirection: "ltr"
              "What is the most interesting thing you have learned recently?\\n\\n(about yourself or in general)"
      <View>
        | bottom: 0
        | insetInline: 0
        | position: "absolute"
        | transform: [{"translateY":0}]
        <View>
          | alignItems: "stretch"
          | backgroundColor: "#f5f5f5e5"
          | borderColor: "#1115161a"
          | borderTopStyle: "solid"
          | borderTopWidth: 1
          | flexDirection: "row"
          | paddingBottom: 10
          | paddingInline: 14
          | paddingTop: 7
          <View accessibilityRole="button" accessibilityLabel="previous question">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#111516"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#6b6d82"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Back"
          <View accessibilityRole="button" accessibilityLabel="exit deck">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#111516"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#6b6d82"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Exit"
          <View accessibilityRole="button" accessibilityLabel="share question">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#111516"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#6b6d82"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Share"
          <View accessibilityRole="button" accessibilityLabel="next question">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#111516"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#6b6d82"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Next"
`;

exports[`Play screen renders a Question unchanged in the Dark Theme Display setting 1`] = `
<View>
  | flex: 1
  <View>
    | backgroundColor: "#08001a"
    | flex: 1
    <View>
      | bottom: 0
      | left: 0
      | opacity: 1
      | position: "absolute"
      | right: 0
      | top: 0
      <ViewManagerAdapter_ExpoImage>
        | bottom: 0
        | left: 0
        | position: "absolute"
        | right: 0
        | top: 0
    <View>
      | flexBasis: "0%"
      | flexGrow: 1
      | flexShrink: 1
      <View>
        | flexBasis: "0%"
        | flexGrow: 1
        | flexShrink: 1
        | paddingBottom: 0
        | paddingInline: 28
        | paddingTop: 0
        <View>
          | flexBasis: "0%"
          | flexGrow: 1
          | flexShrink: 1
          | justifyContent: "center"
          <View>
            | opacity: 1
            | transform: [{"translateX":0}]
            <Text>
              | color: "#f5f5f5"
              | fontFamily: "golos-text"
              | fontSize: 81
              | lineHeight: 93.15
              | textAlign: "left"
              | writingDirection: "ltr"
              "What is the most interesting thing you have learned recently?\\n\\n(about yourself or in general)"
      <View>
        | bottom: 0
        | insetInline: 0
        | position: "absolute"
        | transform: [{"translateY":0}]
        <View>
          | alignItems: "stretch"
          | backgroundColor: "#111516cc"
          | borderColor: "#f5f5f51a"
          | borderTopStyle: "solid"
          | borderTopWidth: 1
          | flexDirection: "row"
          | paddingBottom: 10
          | paddingInline: 14
          | paddingTop: 7
          <View accessibilityRole="button" accessibilityLabel="previous question">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#f5f5f5"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#9698af"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Back"
          <View accessibilityRole="button" accessibilityLabel="exit deck">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#f5f5f5"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#9698af"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Exit"
          <View accessibilityRole="button" accessibilityLabel="share question">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#f5f5f5"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#9698af"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Share"
          <View accessibilityRole="button" accessibilityLabel="next question">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#f5f5f5"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#9698af"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Next"
`;

exports[`Play screen renders the Pick a Card deck unchanged before a deal 1`] = `
<View>
  | flex: 1
  <View>
    | backgroundColor: "#efe7f7"
    | flex: 1
    <View>
      | bottom: 0
      | left: 0
      | opacity: 1
      | position: "absolute"
      | right: 0
      | top: 0
      <ViewManagerAdapter_ExpoImage>
        | bottom: 0
        | left: 0
        | position: "absolute"
        | right: 0
        | top: 0
    <View>
      | flexBasis: "0%"
      | flexGrow: 1
      | flexShrink: 1
      <View>
        | flexBasis: "0%"
        | flexGrow: 1
        | flexShrink: 1
        | paddingBottom: 0
        | paddingInline: 28
        | paddingTop: 0
        <View>
          | alignItems: "center"
          | flexBasis: "0%"
          | flexGrow: 1
          | flexShrink: 1
          | justifyContent: "center"
          <View>
            | alignItems: "center"
            <View>
              | height: 953
              | width: 686
              <View>
                | backgroundColor: "#262432cc"
                | borderColor: "#f5f5f51a"
                | borderRadius: 20
                | borderStyle: "solid"
                | borderWidth: 1
                | inset: 0
                | position: "absolute"
                | transform: [{"rotate":"-3deg"},{"translateY":10}]
              <View>
                | backgroundColor: "#262432cc"
                | borderColor: "#f5f5f51a"
                | borderRadius: 20
                | borderStyle: "solid"
                | borderWidth: 1
                | inset: 0
                | position: "absolute"
                | transform: [{"rotate":"2deg"},{"translateY":5}]
              <View accessibilityRole="button" accessibilityLabel="Pick a card">
                | inset: 0
                | position: "absolute"
                | transform: [{"scale":1}]
                <View>
                  | backgroundColor: "#08001a"
                  | borderColor: "#f5f5f51a"
                  | borderRadius: 20
                  | borderStyle: "solid"
                  | borderWidth: 1
                  | inset: 0
                  | overflow: "hidden"
                  | position: "absolute"
                  <ViewManagerAdapter_ExpoImage>
                    | bottom: 0
                    | left: 0
                    | position: "absolute"
                    | right: 0
                    | top: 0
                  <Text>
                    | bottom: 17.5
                    | color: "#f9d75f"
                    | fontFamily: "aptly"
                    | fontSize: 26
                    | position: "absolute"
                    | right: 17.5
                    "WHO"
                    <Text>
                      | color: "#c058d2"
                      "?"
                    <Text>
                      | color: "#f5f5f5"
                      "CARDS"
            <View accessibilityRole="button" accessibilityLabel="Tap to pick a card" accessibilityState={}>
              | height: 40
              | justifyContent: "center"
              | marginTop: 28
              <Text>
                | color: "#6b6d82"
                | fontFamily: "golos-text"
                | fontSize: 12.25
                | lineHeight: 17.5
                "Tap to pick a card"
      <View>
        | bottom: 0
        | insetInline: 0
        | position: "absolute"
        | transform: [{"translateY":0}]
        <View>
          | alignItems: "stretch"
          | backgroundColor: "#f5f5f5e5"
          | borderColor: "#1115161a"
          | borderTopStyle: "solid"
          | borderTopWidth: 1
          | flexDirection: "row"
          | paddingBottom: 10
          | paddingInline: 14
          | paddingTop: 7
          <View accessibilityRole="button" accessibilityLabel="previous question">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#111516"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#6b6d82"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Back"
          <View accessibilityRole="button" accessibilityLabel="exit deck">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#111516"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#6b6d82"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Exit"
          <View accessibilityRole="button" accessibilityLabel="next question">
            | alignItems: "center"
            | flexBasis: "0%"
            | flexGrow: 1
            | flexShrink: 1
            | gap: 3.5
            | paddingBlock: 3.5
            | transform: [{"scale":1}]
            <Text>
              | color: "#111516"
              | fontFamily: "ionicons"
              | fontSize: 24
              | fontStyle: "normal"
              | fontWeight: "normal"
              ""
            <Text>
              | color: "#6b6d82"
              | fontFamily: "golos-text"
              | fontSize: 10.5
              | lineHeight: 14
              "Next"
`;

exports[`Play screen renders the unknown-Deck message unchanged 1`] = `
<View>
  | flex: 1
  <View>
    | backgroundColor: "#efe7f7"
    | flex: 1
    <View>
      | bottom: 0
      | left: 0
      | opacity: 1
      | position: "absolute"
      | right: 0
      | top: 0
      <ViewManagerAdapter_ExpoImage>
        | bottom: 0
        | left: 0
        | position: "absolute"
        | right: 0
        | top: 0
    <View>
      ~ className: "flex-1 items-center justify-center"
      <Text>
        | color: "#111516"
        | fontFamily: "golos-text"
        "Deck not found."
`;

exports[`Root layout renders the screen-transition background unchanged 1`] = `
<View>
  | flex: 1
  <View>
    | backgroundColor: "#efe7f7"
`;

exports[`Root layout renders the screen-transition background unchanged in Dark 1`] = `
<View>
  | flex: 1
  <View>
    | backgroundColor: "#08001a"
`;
